still broken yay

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Steganography</title>
-    <link href="static/style.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="static/style.css" rel="stylesheet" type="text/css" /> -->
   </head>
-  <script language="javascript" src="/templates/static/javascript/select.js"></script>
+  <script language="text/javascript" src="{{url_for('static', filename='select.js')}}"></script>
   <body>
       <h1>Select or upload an image</h1>
       <input type="file" id="files" name="files[]">
       <output id="lists"></output>
+      <input type="button" onclick="foo()" value="foo">
       <!-- <script>
         if(window.File && window.FileReader && window.FileList && window.Blob){
           alert("Success");
