--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    {% if title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>ERR NO TITLE</title>
-    {% endif %}
-    <!-- <link href="static/style.css" rel="stylesheet" type="text/css" /> -->
-  </head>
-  <body>
+{% extends "base.html" %}
+{% block content%}      
       <script language="javascript" src="{{url_for('static', filename='select.js')}}"></script>
       <h1>Select or upload an image</h1>
       <input type="file" id="files" name="files[]">
@@ -22,7 +11,4 @@
         <p>
       <div>
       {% endfor %}
-      <!-- <input type="button" onclick="foo()" value="foo"> -->
-  </body>
-</html>
-    
+{%endblock%}
