--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
             {{form.password.label}}<br>
             {{form.password(size=32)}}
         </p>
-        <p>{{form.remember()}} {{form.remember.label}}<p>
+        <p>{{form.remember_me()}} {{form.remember_me.label}}<p>
         <p>{{form.submit()}}</p>
     </form> 
 {% endblock %}
