--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,16 @@
   </head>
   <body>
       <div>Steganography: lorem ipsum <a href="{{url_for('index')}}">Home</a><div>
+      <hr>
+        {% with messages=get_flashed_messages() %}
+        {% if messages %}
+        <ul>
+          {% for message in messages %}
+          <li> {{message}} </li>
+          {% endfor %}
+        </ul>
+        {% endif %}
+        {% endwith %}
       {% block content %} {% endblock %}
   </body>
 </html>
