worked on the app routing

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <!-- <link href="static/style.css" rel="stylesheet" type="text/css" /> -->
   </head>
   <body>
-      <div>Steganography: lorem ipsum <a href="{{url_for('index')}}">Home</a><div>
+      <div>Steganography&nbsp;<a href="{{url_for('index')}}">Home</a>&nbsp;<a href="{{url_for('login')}}">Login</a></div>
       <hr>
         {% with messages=get_flashed_messages() %}
         {% if messages %}
