finished login (pretty much) and logout (also pretty much)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,15 @@
     <!-- <link href="static/style.css" rel="stylesheet" type="text/css" /> -->
   </head>
   <body>
-      <div>Steganography&nbsp;<a href="{{url_for('index')}}">Home</a>&nbsp;<a href="{{url_for('login')}}">Login</a></div>
+      <div>
+        Steganography&nbsp;
+        <a href="{{url_for('index')}}">Home</a>&nbsp;
+        {% if current_user.is_anonymous %}
+        <a href="{{url_for('login')}}">Login</a>
+        {% else %}
+        <a href="{{url_for('logout')}}">Log Out</a>
+        {%  endif %}
+      </div>
       <hr>
         {% with messages=get_flashed_messages() %}
         {% if messages %}
