--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,6 +18,7 @@
         <a href="{{url_for('login')}}">Login</a>&nbsp;
         <a href="{{ url_for('register') }}">Click to Register!</a>
         {% else %}
+        <a href="{{url_for('user', username=current_user.username)}}">Profile</a>
         <a href="{{url_for('logout')}}">Log Out</a>
         {%  endif %}
       </div>
